[package]
name = "x402-rs"
version = "0.9.1"
authors = ["Sergey Ukustov <sergey@ukstv.me>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/x402-rs/x402-rs"
description = "x402 payments in Rust: verify, settle, and monitor payments over HTTP 402 flows"
readme = "README.md"
homepage = "https://x402.rs"
documentation = "https://docs.rs/x402-rs"
keywords = ["blockchain", "payments", "x402", "stablecoin", "http-402"]
categories = ["cryptography", "finance", "network-programming", "web-programming::http-server"]

[dependencies]
axum = { version = "0.8.4" }
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
dotenvy = { version = "0.15.7" }
serde_json = { version = "1.0.140" }
tower-http = { version = "0.6.3", features = ["trace", "cors"] }
serde = { version = "1.0.219", features = ["derive"] }
once_cell = { version = "1.21.3" }
regex = { version = "1.11.1" }
url = { version = "2.5.4", features = ["serde"] }
alloy = { version = "1.0.7" }
thiserror = { version = "2.0.12" }
base64 = { version = "0.22.1" }
rust_decimal = { version = "1.37.1" }
async-trait = { version = "0.1.88" }
dashmap = { version = "6.1.0" }
reqwest = { version = "0.12.15", features = ["json"] }

# Solana
solana-sdk = { version = "2.3.1", features = ["full"] }
solana-commitment-config = { version = "2.2.1" } # Older version due to compatibility with solana-sdk
bincode = { version = "1.3.3" } # Older version due to compatibility with solana-sdk
spl-token = { version = "8.0.0" }
spl-token-2022 = { version = "9.0.0" }
solana-client = { version = "2.3.7" }

# Tracing and OpenTelemetry
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
opentelemetry = { version = "0.30.0" }
opentelemetry_sdk = { version = "0.30.0" }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
tracing-core = { version = "0.1.34" }
tracing-opentelemetry = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["metrics", "grpc-tonic"] }
opentelemetry-stdout = { version = "0.30.0", features = ["trace", "metrics"] }

[features]
telemetry = []

[workspace]
members = [
  "crates/x402-axum",
  "examples/x402-axum-example",
  "crates/x402-reqwest",
  "examples/x402-reqwest-example",
  "."
]
